--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="top-container">
         <img class="top-cloud" src="cloud.png" alt="This is a cloud.">
         <div class="title-text">
-            <h1>I'm Sahitya.</h1>
+            <h1>I'm Shobhit.</h1>
             <p id="proo">a <span class="pro">pro</span>grammer.</p>
         </div>
         <img class="bottom-cloud" src="cloud.png" alt="This is a cloud.">
